Bug 847255 - [AudioChannel] A2DP failed to start session due to music resume too fast during SCO is disconnecting.